--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-    <script src="./assets/js/script.js"></script>
+    
 <body>
     <section>
     <h1 class="header">Code Quiz!</h1>
@@ -16,11 +16,11 @@
             <p class="timer"></p>
         </aside> <!--timer at top right-->
         <div>
-            <h2></h2> <!--question-->
-            <button class="choice">1ONE</button> <!--Option 1-->
-            <button class="choice">2TWO</button> <!--Option 2-->
-            <button class="choice">3THREE</button> <!--Option 3-->
-            <button class="choice">4FOUR</button> <!--Option 4-->
+            <h2 class="question">test</h2> <!--question-->
+            <button id="one" class="choice"></button> <!--Option 1-->
+            <button id="two" class="choice"></button> <!--Option 2-->
+            <button id="three" class="choice"></button> <!--Option 3-->
+            <button id="four" class="choice"></button> <!--Option 4-->
         </div>
     </section>
     <section>
@@ -28,4 +28,5 @@
         <button>See High Scores</button>
     </section>
 </body>
+<script src="./assets/js/script.js"></script>
 </html>
