timer runs in background and logs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <body>
     <section>
-    <h1 class="header">Code Quiz!</h1>
+    <h1 class="header">Code Quiz! <button id="start">Click Here to Start Timer</button></h1>
         <aside>
             <p>Timer</p>
             <p class="timer"></p>
