added start timer that doesn't work

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1 class="header">Code Quiz! <button id="start">Click Here to Start Timer</button></h1>
         <aside>
             <p>Timer</p>
-            <p class="timer"></p>
+            <p class="timer"> </p>
         </aside> <!--timer at top right-->
         <div>
-            <h2 class="question">test</h2> <!--question-->
+            <h2 class="question"></h2> <!--question-->
             <button id="one" class="choice"></button> <!--Option 1-->
             <button id="two" class="choice"></button> <!--Option 2-->
             <button id="three" class="choice"></button> <!--Option 3-->
@@ -25,7 +25,7 @@
     </section>
     <section>
         <p></p><!--Final Score-->
-        <button>See High Scores</button>
+        <button id="high">See High Scores</button>
     </section>
 </body>
 <script src="./assets/js/script.js"></script>
