--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <section>
         <p></p><!--Final Score-->
         <button id="high">See High Scores</button>
+        <input id="initials"> 
+        <p>Enter initials</p>
+        <button id="submit">Submit</button>
     </section>
 </body>
 <script src="./assets/js/script.js"></script>
